...
                        .foregroundStyle(.red)
                }
            } else {
                Text("No workout data")
            }

            Button("Done", action: handleDismiss)
        }
        .task {
            handleSendToPhone()
        }
    }

...
